# chochbuech

./: .dockerignore  .editorconfig  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: ci.yaml
server/: Cargo.toml
server/src/: api.rs  cors.rs  error.rs  main.rs
server/src/db/: mod.rs
server/src/recipes/: data.rs  database.rs
server/src/recipes/migrations/: create-recipes.sql
server/src/tests/: mod.rs
server/src/users/: api.rs  data.rs  database.rs  mock.rs  mod.rs  routes.rs  utils.rs
server/src/users/migrations/: create-users.sql
server/src/waitlist/: api.rs  data.rs  database.rs  mock.rs  mod.rs  routes.rs
server/src/waitlist/migrations/: waitlist-01-create.sql
ui/: index.html  package-lock.json  package.json  server.js  tsconfig.json  vite.config.js
ui/src/: App.svelte  app.scss  client.ts  main.ts  server.ts
ui/src/api/: users.ts  utils.ts  waitlist.ts
ui/src/components/: Counter.svelte  GetNotified.svelte
ui/src/layout/: Footer.svelte  Header.svelte  Toasts.svelte
ui/src/lib/: LoadProps.ts  Session.ts
ui/src/pages/: About.svelte  Home.svelte  New.svelte  NotFound.svelte  SignIn.svelte  SubPage.svelte  routes.ts
ui/src/pages/me/: Index.svelte
ui/src/sass/: btn.scss  fonts.scss  input.scss  richtext.scss
