[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chuchi = { version = "0.1.0", features = ["api", "fs", "json"] }
chuchi-ssr = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chuchi-postgres = { version = "0.1.4", features = ["chuchi"] }
async-trait = "0.1.81"
email_address = "0.2.9"
chuchi-crypto = { version = "0.1.1", features = ["b64", "serde", "postgres"] }
bcrypt = "0.15.1"
